# CPP-WebAssembly-Simple-Example

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: linux-build.yml  main.yml
resources/: main.py
resources/resources/: index.html  script.js
src/: main.cpp
